--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+Working version
+---------------
+
+### Standard library
+
+- #12871: Add the Pqueue module to the stdlib. It implements priority queues.
+  (Jean-Christophe Filliâtre, review by Gabriel Scherer and Daniel Bünzli)
+
 OCaml 5.2 maintenance version
 -----------------------------
 
